--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <div class="chat-container">
         <div class="chat-header">Chat</div>
         <div class="chat-body">
-            <!-- <div class="chat-bubble user-message">I have a question about your products.</div>
+            <!-- <div class="chat-bubble user-message">I have a question about your products.</div> -->
             <div class="chat-bubble bot-message">Hello! How can I assist you?</div>
-            <div class="chat-bubble user-message">Can you tell me about the pricing?</div>
+            <!-- <div class="chat-bubble user-message">Can you tell me about the pricing?</div>
             <div class="chat-bubble bot-message">Our pricing plans start at $10 per month. We have various options available based on your needs.</div> -->
         </div>
         <div class="chat-input">
